# ssvc

./: .gitmodules  Cargo.toml  README.md  build.rs  update_assets.sh
.github/: dependabot.yml
.github/workflows/: asset-sync.yml  build.yml
assets/: README.md
src/: assets.rs  lib.rs  namespaces.rs  validation.rs  wasm.rs
