[package]
name = "ssvc"
edition = "2024"
version = "0.1.0"
publish = true
description = "Implementation of the SSVC specification in Rust"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regress = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8", features = ["include-exclude"] }

[build-dependencies]
serde_json = "1"
typify = "0.6"
prettyplease = "0.2"
syn = "2"
