[package]
name = "ssvc"
edition = "2024"
version = "0.1.0"
publish = true
description = "Implementation of the SSVC specification in Rust"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:tsify", "dep:console_error_panic_hook"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regress = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8", features = ["include-exclude"] }
tsify = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[build-dependencies]
serde_json = "1"
typify = "0.6"
prettyplease = "0.2"
syn = "2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
