[package]
name = "ssvc"
edition = "2024"
rust-version = "1.85.0"
version = "0.2.1"
publish = true
description = "Implementation of the SSVC specification in Rust"
license = "Apache-2.0"
repository = "https://github.com/csaf-rs/ssvc"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:tsify", "dep:console_error_panic_hook"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regress = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8", features = ["include-exclude"] }
tsify = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[build-dependencies]
anyhow = "1"
serde_json = "1"
typify = "0.7.0"
prettyplease = "0.3"
syn = { version = "3" }
jsonschema = { version = "0.47", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"
